# apidocs/openapi.yaml
@@ -1026,6 +1026,22 @@ components:
             $ref: '#/components/schemas/WebRTCSession'
 
 paths:
+
+  /v3/auth/jwks/refresh:
+    post:
+      operationId: authJwksRefresh
+      tags: [Authentication]
+      summary: Manually refreshes the JWT JWKS.
+      responses:
+        '200':
+          description: the request was successful.
+        '500':
+          description: server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /v3/config/global/get:
     get:
       operationId: configGlobalGet
@@ -1357,22 +1373,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-        '500':
-          description: server error.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
-  /v3/auth/jwks/refresh:
-    post:
-      operationId: authJwksRefresh
-      tags: [Authentication]
-      summary: Manually refreshes the JWKS token.
-      description: all fields are optional.
-      responses:
-        '200':
-          description: the request was successful.
         '500':
           description: server error.
           content:
